fixed letter-spacing CSS validation error

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ header {
 }
 
 .top_layer h1 {
-  letter-spacing: -1;
   font-kerning: none;
   font-size: 1.5em;
 }
@@ -156,7 +155,6 @@ header {
   align-items: stretch;
   align-content: stretch;
   top: 60px;
-  overflow-y: auto;
 }
 
 .main_container {
@@ -530,7 +528,6 @@ footer {
   }
 
   .top_layer h1 {
-    letter-spacing: -1;
     font-kerning: none;
     font-size: 1.5em;
     font-family: SansSerifExbFLF;
@@ -547,7 +544,6 @@ footer {
     align-items: stretch;
     align-content: stretch;
     top: 60px;
-    overflow-y: auto;
   }
 
   .main_container {
